Adição da section integrantes

--- a/index.html
+++ b/index.html
@@ -106,52 +106,111 @@
           </div>
         </div>
       </div>
+      <section class="container-fluid text-center" id="quem_somos">
+
+        <div class="page-header title-page">
+          <h3>Quem somos</h3>
+        </div>
+        <div class="row">
+          <div class="col-sm-3 col-md-3 col-lg-3">
+            <div class="thumbnail coordenadora">
+              <img src="img/integrantes/coordenadora.jpg" alt="imagem não encontrada" class="img-circle img-responsive">
+              <div class="capiton">
+                <h3 class="text-dev">Roberta Macêdo</h3>
+                <p class="text-dev">Coordenadora da extensão</p>
+                <p class="text-dev">Professora Doutora da Universidade Federal Rural de pernambuco</p>              </div>
+            </div>
+          </div>
+          <div class="col-sm-3 col-md-3 col-lg-3">
+            <div class="thumbnail coordenadora">
+              <img src="img/integrantes/coordenadora_2.png" alt="imagem não encontrada" class="img-circle img-responsive">
+              <div class="capiton">
+                <h3 class="text-dev">Elizabeth Tscha</h3>
+                <p class="text-dev">Coordenadora voluntária</p>
+                <p class="text-dev">Professora Doutora da Universidade Federal Rural de pernambuco</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-3 col-md-3 col-lg-3">
+            <div class="thumbnail">
+              <img src="img/integrantes/integrante_4.jpg" alt="imagem não encontrada" class="img-circle img-responsive">
+              <div class="capiton">
+                <h3 class="text-dev">Isabel Santiago</h3>
+                <p class="text-dev">Bolsista</p>
+                <p class="text-dev">Estudante de Sistemas de Informação - UFRPE</p>
+              </div>
+            </div>
+          </div>
+          
+          <div class="col-sm-3 col-md-3 col-lg-3">
+            <div class="thumbnail">
+              <img src="img/integrantes/integrante_5.png" alt="imagem não encontrada" class="img-circle img-responsive">
+              <div class="capiton">
+                <h3 class="text-dev">Francisco Queiroga</h3>
+                <p class="text-dev">Voluntário</p>
+                <p class="text-dev">Estudante de Sistemas de Informação - UFRPE</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="container-fluid text-center" id="quem_somos">
+
+        <div class="page-header title-page">
+          <h3>Ex-integrantes</h3>
+        </div>
+        <div class="row">
+          <div class="col-sm-4 col-md-4 col-lg-4">
+            <div class="thumbnail">
+              <img src="img/integrantes/integrante_3.jpg" alt="imagem não encontrada" class="img-circle img-responsive">
+              <div class="capiton">
+                <h3 class="text-dev">Ariana Lima</h3>
+                <p class="text-dev">Bolsista</p>
+                <p>Bacharelado em Sistemas de Informação - UFRPE</p>
+
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-4 col-md-4 col-lg-4">
+            <div class="thumbnail">
+              <img src="img/integrantes/integrante_1.png" alt="imagem não encontrada" class="img-circle img-responsive">
+              <div class="capiton">
+                <h3 class="text-dev">Rodolfo Bispo</h3>
+                <p class="text-dev">Voluntário</p>
+                <p>Bacharelado em Sistemas de Informação - UFRPE</p>
+
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-4 col-md-4 col-lg-4">
+            <div class="thumbnail">
+              <img src="img/integrantes/integrante_2.png" alt="imagem não encontrada" class="img-circle img-responsive">
+              <div class="capiton">
+                <h3 class="text-dev">Jonathan Carvalho</h3>
+                <p class="text-dev">Voluntário</p>
+                <p>Licenciatura em computação - UFRPE</p>
+
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </div>
   </section>
   <!---->
   <section class="section-padding parallax bg-image-2 section wow fadeIn delay-08s" id="cta-2">
   </section>
-  <!---->
-  <!--/ contador-->
-  <div id="about-bg">
-
-    <div class="container">
-      <div class="row">
-        <div class="teste">
-          <div class=" col-xs-12 col-md-4">
-            <div class="about-bg-wrapper">
-              <span class="count">
-                <h1>
-                  <span class="border">365</span>
-                </h1>
-              </span>
-              <p>Alunos presentes</p>
-            </div>
-          </div>
-          <div class="col-xs-12 col-md-4">
-            <div class="about-bg-wrapper">
-              <span class="count">
-                <h1>6</h1>
-              </span>
-              <p>escolas visitadas</p>
-            </div>
-          </div>
-          <div class="col-xs-12 col-md-4">
-            <div class="about-bg-wrapper">
-              <span class="count">
-                <h1>4</h1>
-              </span>
-              <p>imersões em Tatuoca</p>
-            </div>
-          </div>
-        </div>
-      </div>
     </div>
+    
+  </section>
 
-    <div class="cover"></div>
-
-  </div>
+  
   <!---->
+  <section class="section-padding parallax bg-image-2 section wow fadeIn delay-08s" id="cta-2">
+  </section>
+  <!---->
+
+  
 
   <section class="section-padding wow fadeInUp delay-02s" id="portfolio">
     <div class="container">
