--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
             <h2 class="head-title">Sobre</h2>
             <hr class="botm-line">
             <p class="sec-para" align="justify">O projeto propõe a articulação das áreas de computação e educação, fortalecendo a relação Universidade e Sociedade,
-              e promovendo a interdisciplinaridade.Nossa motivação do trabalho surge do interesse em ofertar oficinas de
+              e promovendo a interdisciplinaridade. Nossa motivação do trabalho surge do interesse em ofertar oficinas de
               Computação Desplugada, a fim de favorecer o processo de ensino-aprendizagem colaborativo fundamentado nos pilares
-              da inclusão social e digital</p>
+              da inclusão social e digital.</p>
           </div>
         </div>
 
